changes of UI and darkmode

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
             <h3 class="logoname">SKY BEATS</h3>
             <div class="darkmode-btn">
-                <input type="checkbox" name="">
+                <input  type="checkbox" name="">
             </div>
         </header>
         <!-- include the album contents here  -->
@@ -130,7 +130,7 @@
 
         <ul class="nav-links">
             <li><a  class="showalbums" href="#">All Albums</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a href="./Aboutus.html">About us</a></li>
         </ul>
     </div>
     <script src="app.js"></script>
