--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&family=Roboto:wght@700&display=swap"
         rel="stylesheet">
+        <link rel="shortcut icon" href="#">
 
         <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
@@ -84,8 +85,8 @@
         <div class="albumsorsongs">
         <div class="albums">
             <div class="albumsection1">
-                <div class="albumdiv album1"><img src="./artistimg/ritviz.jpg" alt=""></div>
-                <span class="artistname artist1">Ritviz </span>
+                <div class="albumdiv album1"><img src="./artistimg/SPB.jpg" alt=""></div>
+                <span class="artistname artist1">S P B </span>
                 <div class="albumdiv album2"><img src="./artistimg/BTS.jpg" alt=""></div>
                 <span class="artistname artist2">BTS </span>
             </div>
